# creativity

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  TODO.md  cli.cpp  creativity-gui.desktop  creativity-gui.xml  creativity.imp  data.cpp  database.pgsql  eris.imp  gui.cpp  gui.glade  info.cpp  initial-constrained-value.R  many-sims.sh  random.cpp  results.cpp  run-sim.sh  s2q.cpp  series-graphs.cpp  series-quantiles.cpp  series.cpp  totreatment.pl  typical-sim.sh
bayes/: Gibbs.hpp  GibbsNG.hpp  LinearModel.hpp  NormalGammaSimulator.hpp  PosteriorSimulator.cpp  PosteriorSimulator.hpp
cmake/: CPackProjectConfig.cmake.in
cmake/Modules/: FindLibPQXX.cmake  FindMathJax.cmake
creativity/: Book.cpp  Book.hpp  BookCopy.hpp  BookMarket.cpp  BookMarket.hpp  CmdArgs.cpp  CmdArgs.hpp  CopyrightPolice.cpp  CopyrightPolice.hpp  Creativity.cpp  Creativity.hpp  CreativitySettings.cpp  CreativitySettings.hpp  GUI.cpp  GUI.hpp  GUIGraphArea.cpp  GUIGraphArea.hpp  GUIInfoWindow.cpp  GUIInfoWindow.hpp  GUIShim.cpp  GUIShim.hpp  Policy.cpp  Policy.hpp  PublicTracker.cpp  PublicTracker.hpp  PublicTrackerMarket.cpp  PublicTrackerMarket.hpp  Reader.cpp  Reader.hpp  common.cpp  common.hpp  config.hpp.in
creativity/belief/: CreationQuality.cpp  CreationQuality.hpp  Demand.cpp  Demand.hpp  Linear.cpp  Linear.hpp  LinearDerived.hpp  LinearRestricted.cpp  LinearRestricted.hpp  Profit.cpp  Profit.hpp  ProfitStream.cpp  ProfitStream.hpp  Quality.cpp  Quality.hpp
creativity/cmdargs/: CLI.cpp  CLI.hpp  CmdArgs.cpp  CmdArgs.hpp  Data.cpp  Data.hpp  GUI.cpp  GUI.hpp  Info.cpp  Info.hpp  Results.cpp  Results.hpp  Series.cpp  Series.hpp  SeriesGraphs.cpp  SeriesGraphs.hpp  SeriesQuantiles.cpp  SeriesQuantiles.hpp  SeriesToQuantiles.cpp  SeriesToQuantiles.hpp  Simulator.cpp  Simulator.hpp  Validation.hpp  strings.cpp  strings.hpp
creativity/data/: CSVParser.cpp  CSVParser.hpp  Data.cpp  Data.hpp  Equation.cpp  Equation.hpp  OLS.cpp  OLS.hpp  Regression.hpp  SUR.cpp  SUR.hpp  Treatment.cpp  Treatment.hpp  TreatmentFilter.cpp  TreatmentFilter.hpp  Variable.cpp  Variable.hpp  quantiles.cpp  quantiles.hpp  simdata.cpp  simdata.hpp  tabulate.cpp  tabulate.hpp  util.cpp  util.hpp
creativity/data/graph/: PDF.cpp  PDF.hpp  Series.cpp  Series.hpp  Target.hpp  style.cpp  style.hpp
creativity/gui/: AuthoredBookCols.cpp  AuthoredBookCols.hpp  BookCols.cpp  BookCols.hpp  BookInfoWindow.cpp  BookInfoWindow.hpp  BookStore.cpp  BookStore.hpp  GUI.cpp  GUI.hpp  GraphArea.cpp  GraphArea.hpp  InfoWindow.cpp  InfoWindow.hpp  LibraryStore.cpp  LibraryStore.hpp  MemberStore.hpp  ReaderCols.cpp  ReaderCols.hpp  ReaderInfoWindow.cpp  ReaderInfoWindow.hpp  ReaderStore.cpp  ReaderStore.hpp
creativity/state/: BookState.cpp  BookState.hpp  FileStorage-BE.hpp  FileStorage-LE.hpp  FileStorage.cpp  FileStorage.hpp  MemoryFile.cpp  MemoryFile.hpp  MemoryStorage.cpp  MemoryStorage.hpp  PsqlStorage.cpp  PsqlStorage.hpp  PublicTrackerState.cpp  PublicTrackerState.hpp  ReaderState.cpp  ReaderState.hpp  State.cpp  State.hpp  Storage.cpp  Storage.hpp  StorageBackend.cpp  StorageBackend.hpp
debian/: changelog  control  copyright  creativity-doc.install  creativity-doc.links  creativity-gui.install  creativity.install  libcreativity-data0.install  libcreativity-dev.install  libcreativity-gui0.install  libcreativity0.install  rules
debian/patches/: 0001-Use-boost-regex-instead-of-std-regex.patch  0002-Brace-initializers-confuse-poor-g-4.8-2.patch  0003-creativity-random-needs-boost-for-regex-support.patch  0004-Fix-for-Eigen-3.2.0-.1-compatibility.patch  series
doc/: CMakeLists.txt  Doxyfile.in
scratch/: CMakeLists.txt  belief-test.cpp  datavar-test.cpp  demand-optimize-test.cpp  effort-calculations.cpp  graph-test.cpp  linear-update-test.cpp  optimize-test.cpp  storage-copy.cpp  storage-test.cpp
